--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -13,23 +13,38 @@
                <div class="form-control">
                   <label for="{{ form.first_name.id_for_label }}">First Name</label>
                   <div class="relative w-full">{{ form.first_name }}</div>
+                  {% if form.first_name.errors %}
+                     <p class="mt-1 text-sm text-red-600">{{ form.first_name.errors.0 }}</p>
+                  {% endif %}
                </div>
                <div class="form-control">
                   <label for="{{ form.last_name.id_for_label }}">Last Name</label>
                   <div class="relative w-full">{{ form.last_name }}</div>
+                  {% if form.last_name.errors %}
+                     <p class="mt-1 text-sm text-red-600">{{ form.last_name.errors.0 }}</p>
+                  {% endif %}
                </div>
             </div>
             <div class="form-control">
                <label for="{{ form.email.id_for_label }}">Email</label>
                <div class="relative w-full">{{ form.email }}</div>
+               {% if form.email.errors %}
+                  <p class="mt-1 text-sm text-red-600">{{ form.email.errors.0 }}</p>
+               {% endif %}
             </div>
             <div class="form-control">
                <label for="{{ form.password1.id_for_label }}">Password</label>
                <div class="relative w-full">{{ form.password1 }}</div>
+               {% if form.password1.errors %}
+                  <p class="mt-1 text-sm text-red-600">{{ form.password1.errors.0 }}</p>
+               {% endif %}
             </div>
             <div class="form-control">
                <label for="{{ form.password2.id_for_label }}">Confirm Password</label>
                <div class="relative w-full">{{ form.password2 }}</div>
+               {% if form.password2.errors %}
+                  <p class="mt-1 text-sm text-red-600">{{ form.password2.errors.0 }}</p>
+               {% endif %}
             </div>
             <div class="flex items-center justify-center text-sm">
                <span>Already have an account?</span>
