--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,6 @@
 <header class="block w-full sticky inset-x-0 top-0 z-40 bg-white border-b">
-   <section class="px-8 py-5 mx-auto container flex items-center justify-between">
+   <section class="px-24 py-5 mx-auto container flex items-center justify-between">
+      <!-- Logo -->
       <div class="w-full max-w-64 flex items-center gap-x-3">
          <a class="flex items-center gap-x-3" href="{% url 'home' %}">
             <h1 class="text-2xl font-extrabold flex-shrink-0 text-orange-500">
@@ -7,6 +8,8 @@
             </h1>
          </a>
       </div>
+
+      <!-- Navigation Menu -->
       <div class="flex items-center justify-center w-full">
          <ul class="flex justify-center items-center gap-x-12 font-medium text-gray-700">
             <a href="{% url 'home' %}" class="hover:text-orange-600">Home</a>
@@ -14,32 +17,60 @@
          </ul>
       </div>
 
+      <!-- User Profile -->
       <div class="w-full max-w-48 sm:max-w-64 flex items-center gap-x-3 justify-end">
+         <!-- If user is logged in, then show the user profile -->
          {% if user.is_authenticated %}
             <div class="relative flex-shrink-0 group">
-               <div class="avatar w-10 h-10 rounded-full font-semibold bg-primary-500 text-lg text-white flex items-center justify-center shrink-0 overflow-hidden ring-white ">
-                  <img src="https://images.unsplash.com/photo-1595152452543-e5fc28ebc2b8"
-                       alt="{{ user.first_name }}'s profile picture"
-                       width="40"
-                       height="40" />
+               <div class="w-10 h-10 rounded-full overflow-hidden border border-gray-200">
+                  {% if user.profile.image %}
+                     <img src="{{ user.profile.image.url }}"
+                          alt="{{ user.first_name }}'s profile picture"
+                          width="40"
+                          height="40"
+                          class="w-full h-full object-cover" />
+                  {% else %}
+                     <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png"
+                          alt="Default profile picture"
+                          width="40"
+                          height="40"
+                          class="w-full h-full object-cover" />
+                  {% endif %}
                </div>
                <div class="hidden group-hover:block absolute right-0 pt-7 top-3/4 w-48">
                   <ul class="py-2 z-50 shadow-md rounded-md bg-white border text-sm">
                      <div class="mx-2 pb-2 mb-2 flex items-center gap-x-3 border-b">
-                        <img src="https://images.unsplash.com/photo-1595152452543-e5fc28ebc2b8"
-                             class="w-8 h-8 rounded-full border"
-                             width="32"
-                             height="32"
-                             alt="{{ user.first_name }}'s profile picture" />
+                        {% if user.profile.image %}
+                           <img src="{{ user.profile.image.url }}"
+                                width="32"
+                                height="32"
+                                class="w-8 h-8 rounded-full border border-gray-200 object-cover"
+                                alt="{{ user.first_name }}'s profile picture" />
+                        {% else %}
+                           <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png"
+                                width="32"
+                                height="32"
+                                class="w-8 h-8 rounded-full border border-gray-200 object-cover"
+                                alt="Default profile picture" />
+                        {% endif %}
                         <h3 class="text-gray-800">{{ user.first_name }} {{ user.last_name }}</h3>
                      </div>
+                     <a href="{% url 'profile' %}"
+                        class="font-semibold w-full px-3 py-2 flex items-center gap-x-3 hover:bg-gray-100 hover:text-gray-800">
+                        Profile
+                     </a>
+                     <a href="{% url 'home' %}"
+                        class="font-semibold w-full px-3 py-2 flex items-center gap-x-3 hover:bg-gray-100 hover:text-gray-800">
+                        Dashboard
+                     </a>
                      <a href="{% url 'logout' %}"
-                        class="w-full px-3 py-2 flex items-center gap-x-3 hover:bg-gray-100 hover:text-gray-800">
+                        class="font-semibold w-full px-3 py-2 flex items-center gap-x-3 hover:bg-gray-100 hover:text-gray-800">
                         Log out
                      </a>
                   </ul>
                </div>
             </div>
+            <!-- If user is not logged in, then show the login button -->
          {% else %}
             <a class="px-4 py-1.5 flex items-center gap-x-3 bg-orange-50 text-orange-600 rounded-md"
                href="{% url 'login' %}"><span>Log in</span></a>
