created product model

--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,7 @@
       <div class="flex items-center justify-center w-full">
          <ul class="flex justify-center items-center gap-x-12 font-medium text-gray-700">
             <a href="{% url 'home' %}" class="hover:text-orange-600">Home</a>
-            <a href="{% url 'home' %}" class="hover:text-orange-600">Products</a>
+            <a href="{% url 'all_products' %}" class="hover:text-orange-600">Products</a>
          </ul>
       </div>
 
