--- a/templates/home.html
+++ b/templates/home.html
@@ -7,4 +7,5 @@
     {% else %}
         <p>Please login to continue.</p>
     {% endif %}
+    <a href="{% url 'create_product' %}" >Add Product</a>
 {% endblock body %}
