--- a/templates/home.html
+++ b/templates/home.html
@@ -7,5 +7,5 @@
     {% else %}
         <p>Please login to continue.</p>
     {% endif %}
-    <h1>Hello</h1>
+    <a href="{% url 'create_product' %}" >Add Product</a>
 {% endblock body %}
