updated: product list

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
    </head>
    <body class="text-gray-500 antialiased font-medium">
       {% include "header.html" %}
-      <div class="container mx-auto px-24 border border-gray-200">
+      <div class="container mx-auto py-5 px-24 xl:px-0">
          {% block body %}
             <h1>Hello World</h1>
          {% endblock body %}
