--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,9 @@
       <div class="flex items-center justify-center w-full">
          <ul class="flex justify-center items-center gap-x-12 font-medium text-gray-700">
             <a href="{% url 'home' %}" class="hover:text-orange-600">Home</a>
-            <a href="" class="hover:text-orange-600">Products</a>
+            {% if user.is_authenticated %}
+               <a href="{% url 'my_products' %}" class="hover:text-orange-600">My Products</a>
+            {% endif %}
          </ul>
       </div>
 
